--- a/Manifest/manifest_sme.json
+++ b/Manifest/manifest_sme.json
@@ -164,6 +164,13 @@
     "messageTeamMembers"
   ],
   "validDomains": [
+        "*.login.microsoftonline.com",
+        "*.sharepoint.com",
+        "*.sharepoint-df.com",
+        "spoppe-a.akamaihd.net",
+        "spoprod-a.akamaihd.net",
+        "resourceseng.blob.core.windows.net",
+        "msft.spoppe.com",
     "<<appDomain>>"
   ]
 }
